[project]
name = "comfyui-sdxl_art_library-button"
description = "常用艺术库 按钮 双语版"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-SDXL_Art_Library-Button"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SDXL_Art_Library-Button"
Icon = ""
